--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="C:/Users/M Amruth Sai/OneDrive/Desktop/sample/assets/images/BACTERAILBLIGHT3_030.jpg" alt="Bacterial Blight">
+                <img src="assets/images/BACTERAILBLIGHT3_030.jpg" alt="Bacterial Blight">
                 <div class="card-content">
                     <h2>Bacterial Blight</h2>
                     <p>Bacterial blight is caused by Xanthomonas oryzae. It leads to yellowing and wilting of rice plants.</p>
