--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     .landing {
         background: linear-gradient(to top,rgba(0, 0, 0, 0.674),rgba(0, 0, 0, 0.685))
-        ,url('C:/Users/M Amruth Sai/OneDrive/Desktop/sample/assets/images/Gautam-Adani-IRMA-Speech.jpg') no-repeat center center;
+        ,url('assets/images/Gautam-Adani-IRMA-Speech.jpg') no-repeat center center;
         background-size: cover;
         color: white;
         text-align: center;
@@ -148,7 +148,7 @@
             </div>
         <section class="cards">
             <div class="card">
-                <img src="C:/Users/M Amruth Sai/OneDrive/Desktop/sample/assets/images/BLAST1_030.jpg" alt="Rice Leaf Blast">
+                <img src="assets/images/BLAST1_030.jpg" alt="Rice Leaf Blast">
                 <div class="card-content">
                     <h2>Rice Leaf Blast</h2>
                     <p>This disease is caused by the fungus Magnaporthe oryzae. It can cause significant yield losses in rice crops.</p>
@@ -164,7 +164,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="C:/Users/M Amruth Sai/OneDrive/Desktop/sample/assets/images/brownspot_orig_030.jpg" alt="Brown Spot">
+                <img src="assets/images/brownspot_orig_030.jpg" alt="Brown Spot">
                 <div class="card-content">
                     <h2>Brown Spot</h2>
                     <p>Brown spot is caused by the fungus Bipolaris oryzae. It appears as small, round to oval, brown spots on leaves, leading to reduced photosynthesis and grain yield.</p>
